--- a/main.css
+++ b/main.css
@@ -10,15 +10,33 @@ body {
 	color: #fff;
 	letter-spacing: 1px;
 }
+
+.fluid{
+  width:100%;
+  display: block;
+}
+
+
 /*header start*/
 
 
-   header { padding: 50px 88px; position: fixed; width: 100%; } @media only screen and (max-width: 1500px) { header { padding: 30px 50px; } } @media only screen and (max-width: 768px) { header { padding: 20px 20px; } } .links-list { float: right; } .logo-wrap { display: block; width: 100%; max-width: 222px; float: left; } @media only screen and (max-width: 1500px) { .logo-wrap { max-width: 150px; } } @media only screen and (max-width: 768px) { .logo-wrap { max-width: 100px; } } @media only screen and (max-width: 680px) { .logo-wrap { max-width: 80px; } }
+   header { padding: 50px 88px; position: fixed; width: 100%;z-index: 4 } @media only screen and (max-width: 1500px) { header { padding: 30px 50px; } } @media only screen and (max-width: 768px) { header { padding: 20px 20px; } } .links-list { float: right; } .logo-wrap { display: block; width: 100%; max-width: 222px; float: left; } @media only screen and (max-width: 1500px) { .logo-wrap { max-width: 150px; } } @media only screen and (max-width: 768px) { .logo-wrap { max-width: 100px; } } @media only screen and (max-width: 680px) { .logo-wrap { max-width: 80px; } }
 
 
 
 
 /*header css end*/
+
+
+.overlap-content-wrap{
+  position: absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  overflow-y:  auto;
+  z-index:  3
+}
 
 /*site btn css start*/
 
@@ -111,6 +129,13 @@ body {
 	visibility: hidden;
 	transform: translateX(-50%, 60px);
 	overflow: hidden;
+
+  /*update*/
+
+      width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
 @media only screen and (max-width: 768px) {
 	.question-popup {
@@ -168,12 +193,22 @@ body {
 	text-transform: uppercase;
 	margin-bottom: 50px;
 	line-height: 1.2;
+      font-style: italic;
+    font-weight: 300;
 }
 @media only screen and (max-width: 1024px) {
 	.question-copy {
 		font-size: 25px;
 	}
 }
+
+@media only screen and (max-width: 00px) {
+  .question-copy {
+    font-size: 16px;
+    
+  }
+}
+
 @media only screen and (max-width: 514px) {
 	.question-copy {
 		font-size: 18px;
@@ -224,6 +259,13 @@ body {
 	height: 100vh;
 	overflow: hidden;
 	position: relative;
+
+  /*update*/
+
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
 }
 #game img.terrain {
 	width: 100%;
@@ -290,6 +332,12 @@ body {
   .question-content-wrap {
     position: relative;
     padding: 50px 6% 50px 6.5%; }
+
+    @media only screen and (max-width:1500px){
+      .question-content-wrap{
+        padding:30px 6% 30px 6.5%;
+      }
+    }
     @media only screen and (max-width: 1024px) {
       .question-content-wrap {
         padding: 20px 6% 20px 6.5%; } }
@@ -398,8 +446,12 @@ body {
     font-size: 30px;
     background-image: url("./assets/images/timer-bg.png");
       padding: 30px 50px 30px 30px;
+      padding: 23px 50px 30px 30px;
           position: relative;
       z-index: 2;
+          height: 100px;
+      width:100%;
+      max-width: 210px;
   
   }
   
@@ -441,9 +493,9 @@ body {
   
   
   @media only screen and (max-width: 1024px){
-    .logo-wrap{
+    /*.logo-wrap{
       max-width: 100px;
-    }
+    }*/
   
     .timer-part-left,.timer-part-right{
       font-size: 14px;
@@ -451,6 +503,10 @@ body {
     .timer-part-center{
       font-size: 24px;
           padding: 10px 35px 20px 20px;
+
+          height: 80px;
+    padding: 18px 50px 0 30px;
+    max-width: 180px;
     }
   
     .site-btn-secondary{
@@ -469,6 +525,10 @@ body {
     .timer-part-center{
       font-size: 16px;
       padding: 10px 35px 20px 20px;
+
+      padding: 10px 18px 20px 12px;
+    height: 50px;
+    max-width: 115px;
     }
   
     .timer-part-left{
@@ -661,6 +721,14 @@ body {
   
   .question-options{
     min-width:100px;
+    margin-bottom:20px;
+  }
+
+  @media only screen and (max-width: 1500px){
+    .question-options{
+      font-size:22px;
+      padding-top:12px;
+    }
   }
   
   
@@ -675,4 +743,60 @@ body {
       font-size:14px;
     }
   }
-  header { padding: 50px 88px; position: fixed; width: 100%; } @media only screen and (max-width: 1500px) { header { padding: 30px 50px; } } @media only screen and (max-width: 768px) { header { padding: 20px 20px; } } .links-list { float: right; } .logo-wrap { display: block; width: 100%; max-width: 222px; float: left; } @media only screen and (max-width: 1500px) { .logo-wrap { max-width: 150px; } } @media only screen and (max-width: 768px) { .logo-wrap { max-width: 100px; } } @media only screen and (max-width: 680px) { .logo-wrap { max-width: 80px; } }
+
+
+/*contest popup css start*/
+
+
+.popup-wrap {
+  position: absolute;
+  width: 100%;
+  max-width: 800px;
+  top: 20%;
+  left: 50%;
+  z-index: 5;
+  transform: translate(-50%, 0);
+  text-align: center;
+  visibility: hidden;
+  display: none;
+  pointer-events: none; }
+  @media only screen and (max-width: 1500px) {
+    .popup-wrap {
+      max-width: 50%;
+      top: 15%; } }
+  @media only screen and (max-width: 1300px) {
+    .popup-wrap {
+      max-width: 60%; } }
+  @media only screen and (max-width: 1024px) {
+    .popup-wrap {
+      padding: 40px 20px;
+      top: 130px;
+      padding-top: 0;
+      padding-bottom: 20px; } }
+  @media only screen and (max-width: 768px) {
+    .popup-wrap {
+      top: 80px; } }
+  @media only screen and (max-width: 680px) {
+    .popup-wrap {
+      max-width: 100%; } }
+  .popup-wrap.shown {
+    pointer-events: auto; }
+
+
+    .popup-content-wrap {
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 60px 40px;
+  text-align: center;
+  min-height: 600px;
+  position: relative; }
+  @media only screen and (max-width: 1500px) {
+    .popup-content-wrap {
+      padding: 40px 30px;
+      min-height: 500px; } }
+  @media only screen and (max-width: 768px) {
+    .popup-content-wrap {
+      min-height: 400px;
+      padding: 30px 20px; } }
+  @media only screen and (max-width: 514px) {
+    .popup-content-wrap {
+      padding: 20px; } }
