--- a/main.css
+++ b/main.css
@@ -945,6 +945,7 @@ span.fb-icon-wrap {
   display: block;
   position: absolute;
   bottom: 10px;
+  color: #ab2020;
   opacity: 0;
   -webkit-transform: scale(0.4);
   -moz-transform: scale(0.4);
